# swap-decoder

./: .gitignore  Cargo.toml  README.md  fetch_data.sh
src/: main.rs
src/interfaces/: metamask.rs  mod.rs  oneinch_v4.rs  oneinch_v5.rs  paraswap_v5.rs  uniswap_v3.rs  universal_router.rs  zerox.rs
