[package]
name = "defi-semantics-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.2.0", features = ["sol-types", "providers", "provider-http", "contract", "rpc-types", "rpc-types-trace"] }
clap = "4.5.11"
eyre = "0.6.12"
polars = { version = "0.41.3", features = ["parquet", "lazy"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.1", features = ["full"] }
